--- a/templates/hello.html
+++ b/templates/hello.html
@@ -6,7 +6,7 @@
     height: 90px;
     vertical-align:  middle;">
 {% if name %}
-  <h1>Hello, s3cloudhub</h1>
+  <h1>Welcome to python-app project </h1>
 {% else %}
   <h1>Hello, World!</h1>
 {% endif %}
